Update to the modified API definition
