# go/inline_response_200_1.go
@@ -1,5 +1,5 @@
 /*
- * OLA-HD Repository
+ * OLA-HD Repository API
  *
  * This is the API definition for the (OCR-D) OLA-HD Repository server. You can find out more about OLA-HD [http://ocr-d.de/modulprojekte#%20OLA-HD](http://ocr-d.de/modulprojekte#%20OLA-HD). For test purposes, you can use the api key `test-key` to test the authorization     filters.
  *
@@ -15,4 +15,6 @@ type InlineResponse2001 struct {
 	RecordId string `json:"recordId"`
 
 	VersionId string `json:"versionId"`
+
+	PremisInfo []InlineResponse2001PremisInfo `json:"premisInfo"`
 }
